--- a/Yueling/src/index.html
+++ b/Yueling/src/index.html
@@ -4,36 +4,34 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri App</title>
+    <title>Chat App</title>
     <script type="module" src="/main.js" defer></script>
   </head>
 
   <body>
     <main class="container">
-      <h1>Welcome to Tauri</h1>
+      <h1>Chat Application</h1>
 
-      <div class="row">
-        <a href="https://tauri.app" target="_blank">
-          <img src="/assets/tauri.svg" class="logo tauri" alt="Tauri logo" />
-        </a>
-        <a
-          href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
-          target="_blank"
-        >
-          <img
-            src="/assets/javascript.svg"
-            class="logo vanilla"
-            alt="JavaScript logo"
-          />
-        </a>
+      <div class="chat-container">
+        <!-- 连接控制 -->
+        <div class="connection-controls">
+          <select id="protocol-select">
+            <option value="quic">QUIC</option>
+            <option value="tcp">TCP</option>
+          </select>
+          <button id="connect-btn">Connect</button>
+          <button id="disconnect-btn" disabled>Disconnect</button>
+        </div>
+
+        <!-- 消息列表 -->
+        <div id="messages" class="messages"></div>
+
+        <!-- 消息输入 -->
+        <div class="message-input-container">
+          <input id="message-input" placeholder="Type a message..." />
+          <button id="send-btn" disabled>Send</button>
+        </div>
       </div>
-      <p>Click on the Tauri logo to learn more about the framework</p>
-
-      <form class="row" id="greet-form">
-        <input id="greet-input" placeholder="Enter a name..." />
-        <button type="submit">Greet</button>
-      </form>
-      <p id="greet-msg"></p>
     </main>
   </body>
 </html>
